# Thermonator

./: .gitignore  CMakeLists.txt  README.md  Thermonator_de_DE.ts  main.cpp
backend/: ConnectionHandler.cpp  ConnectionHandler.hpp  DeviceManager.cpp  DeviceManager.hpp  DeviceScanner.cpp  DeviceScanner.hpp  ServiceScanner.cpp  ServiceScanner.hpp
backend/EQ3Thermostat/: IOService.cpp  IOService.hpp
backend/eq3Thermostat/: Controller.cpp  Controller.hpp  Eq3Thermostat.cpp  Eq3Thermostat.hpp  IOService.cpp  IOService.hpp
backend/eq3Thermostat/answer/: DayTimerNotification.cpp  DayTimerNotification.hpp  SerialNumberNotification.cpp  SerialNumberNotification.hpp  StatusNotification.cpp  StatusNotification.hpp
backend/eq3Thermostat/command/: BoostControl.cpp  BoostControl.hpp  BoostOff.cpp  BoostOff.hpp  BoostOn.cpp  BoostOn.hpp  ComfortAndEcoTemperature.cpp  ComfortAndEcoTemperature.hpp  ConfigureComfortAndEcoTemperatureCommand.cpp  ConfigureComfortAndEcoTemperatureCommand.hpp  ConfigureOffsetTemperature.cpp  ConfigureOffsetTemperature.hpp  ConfigureOpenWindowMode.cpp  ConfigureOpenWindowMode.hpp  ConfigureOpenWindowModeCommand.cpp  ConfigureOpenWindowModeCommand.hpp  DateTime.cpp  DateTime.hpp  DayTimer.cpp  DayTimer.hpp  GetDayTimerCommand.cpp  GetDayTimerCommand.hpp  GetSerialNumberCommand.cpp  GetSerialNumberCommand.hpp  HardwareButtonsControl.cpp  HardwareButtonsControl.hpp  HardwareButtonsLock.cpp  HardwareButtonsLock.hpp  HardwareButtonsUnlock.cpp  HardwareButtonsUnlock.hpp  SerialNumber.cpp  SerialNumber.hpp  SetBoostOffCommand.cpp  SetBoostOffCommand.hpp  SetBoostOnCommand.cpp  SetBoostOnCommand.hpp  SetComfortTemperatureCommand.cpp  SetComfortTemperatureCommand.hpp  SetCurrentDateTimeCommand.cpp  SetCurrentDateTimeCommand.hpp  (+28 more)
backend/eq3Thermostat/notification/: DayTimerNotification.cpp  DayTimerNotification.hpp  GetDayTimerNotification.cpp  GetDayTimerNotification.hpp  SerialNumberNotification.cpp  SerialNumberNotification.hpp  SetDayTimerNotification.cpp  SetDayTimerNotification.hpp  StatusNotification.cpp  StatusNotification.hpp
backend/eq3Thermostat/types/: AsciiSign.cpp  AsciiSign.hpp  ConfigureComfortAndEcoTemperatureCommand.cpp  ConfigureComfortAndEcoTemperatureCommand.hpp  ConfigureOpenWindowModeCommand.cpp  ConfigureOpenWindowModeCommand.hpp  Date.cpp  Date.hpp  DateTime.cpp  DateTime.hpp  DayOfWeek.cpp  DayOfWeek.hpp  DayTimer.cpp  DayTimer.hpp  DayTimerEntries.cpp  DayTimerEntries.hpp  DayTimerEntry.cpp  DayTimerEntry.hpp  GetDayTimerCommand.cpp  GetDayTimerCommand.hpp  OpenWindowInterval.cpp  OpenWindowInterval.hpp  RequestSerialNumberCommand.cpp  RequestSerialNumberCommand.hpp  SerialNumber.cpp  SerialNumber.hpp  SerialNumberCommand.cpp  SerialNumberCommand.hpp  SerialNumberNotificationData.cpp  SerialNumberNotificationData.hpp  SetBoostOffCommand.cpp  SetBoostOffCommand.hpp  SetBoostOnCommand.cpp  SetBoostOnCommand.hpp  SetComfortTemperatureCommand.cpp  SetComfortTemperatureCommand.hpp  SetCurrentDateTimeCommand.cpp  SetCurrentDateTimeCommand.hpp  SetEcoTemperatureCommand.cpp  SetEcoTemperatureCommand.hpp  (+30 more)
backend/gui/: WindowManager.cpp  WindowManager.hpp
backend/gui/pages/scanConnectPage/: ScanConnectPageController.cpp  ScanConnectPageController.hpp  ScannedDevice.cpp  ScannedDevice.hpp  ScannedDevicesModel.cpp  ScannedDevicesModel.hpp
backend/gui/scanConnectWindow/: ScanConnectWindowController.cpp  ScanConnectWindowController.hpp  ScannedDevice.cpp  ScannedDevicesModel.cpp  ScannedDevicesModel.hpp
backend/guiController/: ScanConnectWindowController.cpp  ScanConnectWindowController.hpp
backend/qmlTypes/: Button.hpp
backend/utility/: EnumToString.hpp  Utility.cpp  Utility.hpp
qml/: main.qml  qml.qrc
qml/components/: Button.qml  ButtonWithText.qml
qml/pages/: ScanConnectPage.qml  ThermostatConfigurationPage.qml
qml/windows/: ScanConnectWindow.qml  ScanConnectWindowDelegate.qml
